fixed whitespace issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,6 +34,10 @@ h4 {
   grid-column: span 12;
 }
 
+.grid--column-preview .confidential{
+  white-space: initial;
+}
+
 .gmail_signature{
   padding: 2rem;
   white-space: nowrap;
